adjust dashboard based on product reqs pdf

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/material-nextjs": "^6.4.3",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
+    "@types/recharts": "^1.8.29",
     "next": "15.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
